# KlausurBotPro

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DECISIONS.md  KlausurBotPro_Architekturplan.md  PROJECT_CONCEPT.md  README.md  ROADMAP.md  SOURCE_POLICY.md  TEST_STRATEGY.md
docs/ai/: KlausurBotPro_AI_Operator_Manual.md
docs/implementation/: KlausurBotPro_Implementierungspaket_Frequenzsaeule_Nyquist_Reserven.md  KlausurBotPro_Implementierungspaket_Hurwitz_Routh.md  KlausurBotPro_Implementierungspaket_Polynom_Parameterkern.md  KlausurBotPro_Implementierungspaket_Zeitbereich_Laplace_PBZ_Zeitantworten.md  KlausurBotPro_Implementierungspriorisierung_nach_Expertenpaketen.md
docs/planning/: KlausurBotPro_Phase1_Stabilisierungsbacklog_2026-07-23.md  KlausurBotPro_Roadmap_Gesamtkonzept_2026-07-23.md
docs/reference/: KlausurBotPro_Fachspezifikation_Charakteristische_Polynome_Parameterbedingungen.md  KlausurBotPro_Fachspezifikation_Hurwitz_Routh.md  KlausurBotPro_Fachspezifikation_Nyquist_Reserven.md  KlausurBotPro_Fachspezifikation_Standardglieder_Bode.md  README.md  RT1_Fachspezifikation_Laplace_PBZ_Zeitantworten.md  RT1_Rechenwege_Master.md
docs/releases/: v0.1.1-exam.md
resources/: source_manifest.example.yaml
resources/pdf/: README.md
resources/reference_notebooks/: README.md
scripts/: README.md
src/klausurbotpro/: __init__.py  __main__.py  app.py
tests/: __init__.py  conftest.py  test_compatibility.py  test_smoke.py
tests/application/: test_controller_design_workflow.py  (+29 more)
(+209 files in other folders)
