[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "klausurbotpro"
version = "0.1.1"
description = "Lokale Desktopanwendung für klausurtaugliche Regelungstechnik-1-Workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "KlausurBotPro contributors" }]
dependencies = [
    "control>=0.10.2",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "PySide6>=6.11.1",
    "scipy>=1.18.0",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "ruff>=0.11",
]

[project.scripts]
klausurbotpro = "klausurbotpro.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/klausurbotpro"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["control", "control.*", "scipy", "scipy.*", "sympy", "sympy.*"]
ignore_missing_imports = true
